departmentdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: departments
spec:
  selector:
    matchLabels:
      app: departments
  replicas: 1
  template:
    metadata:
      labels:
        app: departments
    spec:
      containers:
        - name: department-container
          image: deptapi:v1
          imagePullPolicy: Never
          resources: # very important configuration for the POD so that service will be loaded and executed
            limits:
              cpu: "500m" # allocate half CPU for this service
              memory: "128Mi" # 128 MB of memory
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: departments-service
spec:
  selector:
    app: departments
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  type: ClusterIP
