empdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees
spec:
  selector:
    matchLabels:
      app: employees
  replicas: 1
  template:
    metadata:
      labels:
        app: employees
    spec:
      containers:
        - name: employee-container
          image: empapi:v1
          imagePullPolicy: Never
          resources: # very important configuration for the POD so that service will be loaded and executed
            limits:
              cpu: "500m" # allocate half CPU for this service
              memory: "128Mi" # 128 MB of memory
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: employees-service
spec:
  selector:
    app: employees
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  type: ClusterIP
