ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /api/Employee
          backend:
            serviceName: employees-service
            servicePort: 80
        - path: /api/Department
          backend:
            serviceName: departments-service
            servicePort: 80
